Fixed small spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -189,7 +189,7 @@
   
 .fillContainer{
     object-fit: fill;
-    width: 85%;
+    width: 75%;
     padding: 20px;
     border-style: solid;
     border-width: 2px;
